--- a/style.css
+++ b/style.css
@@ -54,3 +54,12 @@
 .navbar ul li:hover::after {
   width: 100%;
 }
+
+.website-content {
+  width: 100%;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  text-align: center;
+  color: #fff;
+}
