--- a/style.css
+++ b/style.css
@@ -63,3 +63,14 @@
   text-align: center;
   color: #fff;
 }
+
+.website-content h1 {
+  font-size: 70px;
+  margin-top: 80px;
+}
+
+.website-content p {
+  margin: 20px auto;
+  font-weight: 100;
+  line-height: 25px;
+}
