--- a/style.css
+++ b/style.css
@@ -74,3 +74,16 @@
   font-weight: 100;
   line-height: 25px;
 }
+
+button {
+  width: 200px;
+  padding: 15px 0;
+  text-align: center;
+  margin: 10px 20px;
+  border-radius: 25px;
+  font-weight: bold;
+  border: 2px solid #009688;
+  background: transparent;
+  color: #fff;
+  cursor: pointer;
+}
