--- a/style.css
+++ b/style.css
@@ -86,4 +86,15 @@ button {
   background: transparent;
   color: #fff;
   cursor: pointer;
+  position: relative;
+}
+
+span {
+  background: #009688;
+  height: 100%;
+  width: 100%;
+  border-radius: 25px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
 }
