--- a/style.css
+++ b/style.css
@@ -87,6 +87,7 @@ button {
   color: #fff;
   cursor: pointer;
   position: relative;
+  overflow: hidden;
 }
 
 span {
@@ -97,4 +98,5 @@ span {
   position: absolute;
   left: 0;
   bottom: 0;
+  z-index: -1;
 }
