--- a/style.css
+++ b/style.css
@@ -93,10 +93,19 @@ button {
 span {
   background: #009688;
   height: 100%;
-  width: 100%;
+  width: 0;
   border-radius: 25px;
   position: absolute;
   left: 0;
   bottom: 0;
   z-index: -1;
+  transition: 0.3s;
+}
+
+button:hover span {
+  width: 100%;
+}
+
+button:hover {
+  border: none;
 }
